core/src/main/test/templates/error/if1.zs
jhjklk;asdf
akjaskfj;asjdf jaskdfj alks
kasdldfkj 
asdfalkjsdlfj
[#if foo]
	blib blab [/if]
[#elseif]
sdfg
[#else]
	foo bar
[/#if]